<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_layout_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.view.activity.MainActivity">

    <ImageView
        android:id="@+id/ivDetais"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="31dp"
        android:scaleType="fitEnd"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintWidth_default="spread"
        tools:ignore="ContentDescription"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:src="@drawable/img_sun"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="104dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="31dp" />

    <TextView
        android:id="@+id/tvDetaisMaxTemp"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="20"
        android:textSize="110sp"
        app:layout_constraintLeft_toLeftOf="@+id/tvDetailsDate"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailsDate"
        tools:layout_constraintLeft_creator="1" />


    <TextView
        android:id="@+id/tvDetaisDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/weather"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="@+id/tvDetailsMinTemp"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailsMinTemp"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/tvDetaisPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="747"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDetailsPressureText"
        app:layout_constraintLeft_toRightOf="@+id/tvDetailsPressureText"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/tvDetaisHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="34%"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDetailsHumidityText"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/tvDetailsHumidityText"
        android:layout_marginLeft="6dp" />

    <TextView
        android:id="@+id/tvDetaisWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="3"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDetailsWindText"
        app:layout_constraintLeft_toRightOf="@+id/tvDetailsWindText" />

    <TextView
        android:id="@+id/tvDetailsMetricMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celsius"
        android:textSize="25sp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginStart="10dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/tvDetaisMaxTemp"
        app:layout_constraintLeft_toRightOf="@+id/tvDetaisMaxTemp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/tvDetailsMetricMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celsius"
        android:textSize="25sp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginStart="8dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/tvDetailsMinTemp"
        app:layout_constraintLeft_toRightOf="@+id/tvDetailsMinTemp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/tvDetailsmm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:text="@string/mm"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDetaisPressure"
        app:layout_constraintLeft_toRightOf="@+id/tvDetaisPressure"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/tvDetailsms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:text="@string/ms"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDetaisWind"
        app:layout_constraintLeft_toRightOf="@+id/tvDetaisWind"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/tvDetailsPressureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pressure"
        app:layout_constraintLeft_toLeftOf="@+id/tvDetaisDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvDetaisDescription" />

    <TextView
        android:id="@+id/tvDetailsHumidityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/humidity"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailsPressureText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tvDetailsPressureText" />

    <TextView
        android:id="@+id/tvDetailsWindText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailsHumidityText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tvDetailsHumidityText" />

    <TextView
        android:id="@+id/tvDetailsDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="Date"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/tvDetailsMinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="18"
        android:textSize="60sp"
        app:layout_constraintLeft_toLeftOf="@+id/tvDetaisMaxTemp"
        app:layout_constraintTop_toBottomOf="@+id/tvDetaisMaxTemp"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/tvDetailPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDetailsHumidityText"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/tvDetaisHumidity"
        android:layout_marginLeft="8dp" />

</android.support.constraint.ConstraintLayout>
