<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgWeatherSun">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="@dimen/offset_large"
        android:layout_marginRight="@dimen/offset_large"
        android:layout_marginTop="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_sun"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/offset_large"
        android:layout_marginRight="@dimen/offset_large"
        android:layout_marginTop="48dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon"
        app:layout_constraintWidth_default="wrap" />

    <TextView
        android:id="@+id/version_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/offset_large"
        android:layout_marginRight="@dimen/offset_large"
        android:layout_marginTop="@dimen/offset_medium"
        android:textColor="@android:color/white"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name_text"
        app:layout_constraintWidth_default="wrap"
        tools:text="Version 1.0" />

    <TextView
        android:id="@+id/author_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/offset_medium"
        android:text="@string/author_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/images_license_text"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/version_text"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_default="wrap" />

    <TextView
        android:id="@+id/images_license_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/offset_large"
        android:layout_marginLeft="@dimen/offset_large"
        android:layout_marginRight="@dimen/offset_large"
        android:text="@string/weather_images_license_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_default="wrap" />
</android.support.constraint.ConstraintLayout>